fix(item): only default slot content wraps

--- a/core/src/components/item/item.scss
+++ b/core/src/components/item/item.scss
@@ -445,10 +445,7 @@ button, a {
 .input-wrapper {
   display: flex;
 
-  // This flex property is required in order to keep
-  // the label from shrinking when there are wide
-  // elements next to it
-  flex: 1 0 auto;
+  flex: 1;
 
   flex-direction: inherit;
 
